# examples

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md
audio/: CMakeLists.txt  generator.c  generator.cpp  recorder.c  recorder.cpp
network/: CMakeLists.txt  berkeley_sockets_epoll.c  berkeley_sockets_kqueue.c  berkeley_sockets_poll.c  berkeley_sockets_select.c  common.h  ssh.c  sslCommon.h  sslTcpClient.c  sslTcpServer.c  ssl_common.h  ssl_tcp_client.c  ssl_tcp_server.c  unix_bluetooth_client.c  unix_bluetooth_server.c
patterns/: CMakeLists.txt  abstract_factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  command.cpp  composite.cpp  decorator.cpp  facade.cpp  factory_method.cpp  mediator.cpp  observer.cpp  prototype.cpp  proxy.cpp  state.cpp  strategy.cpp  visitor.cpp
queues/: CMakeLists.txt  msmq.c  posix_queue.c  systemv_queue.c
system/: CMakeLists.txt  Makefile  console.c  gamepad.c  ioring.c  linux_kernel_module_extended.c  linux_kernel_module_simple.c  service.c  vtable.c  window_winapi.c  window_x11.c
